# whisper-translator-cn

./: .gitignore  README.md  config.py  config.yaml.template  logger.py  main.py  pyproject.toml  requirements.txt  setup.py  subtitle.py  translate.py  whisper_process.py
whisper_translator/: __init__.py  cli.py  config.py  config.yaml.template  core.py  logger.py  subtitle.py  translate.py  whisper_process.py
whisper_translator-cn/: __init__.py  config.yaml.template  core.py  subtitle.py  translate.py  whisper_process.py
