[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_translator"
version = "0.1.0"
description = "自动生成中文字幕的音视频处理工具"
requires-python = ">=3.7"
dependencies = [
    "openai>=1.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "pydub>=0.25.1",
    "faster-whisper",
]

[project.scripts]
wtrans = "whisper_translator.cli:run"

[tool.setuptools.package-data]
whisper_translator = ["config.yaml.template"]
